# guoguan_extract_titles

./: .gitignore  README.md  main.py  pyproject.toml
core/: _1_to_image.py  _2_get_title_bbox.py  _3_crop_titles.py  _4_extract_titles.py  _5_insert_to_toc.py  extract_text_from_pdf.py  extract_titles_from_pdf.py  timer.py  toc_example.py
